[tool.poetry]
name = "mapaction-worldpop"
version = "0.2.0"
description = ""
authors = ["cate <catherine.seale@ukho.gov.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
geopandas = "^0.14.4"
pyprojroot = "^0.3.0"
pyyaml = "^6.0.1"
earthengine-api = "^0.1.406"
eeutil = "^0.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
jupyterlab = "^4.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
